# datamine_exporter

./: .gitignore  Cargo.toml  README.md  fetch_datamine.sh
.github/ISSUE_TEMPLATE/: bug_report.md
src/: datamine.rs  export_unique_entry_ids.rs  lib.rs  main.rs  spreadsheet.rs
src/spreadsheet/: client.rs
