[package]
name = "datamine_exporter"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
