[package]
name = "datamine_exporter"
version = "1.0.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
reqwest = { version = "0.10.6", features = ["gzip", "brotli"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
tokio = { version = "0.2.21", features = ["full"] }
dotenv = "0.15.0"
indicatif = "0.14.0"
regex = "1.3.9"
lazy_static = "1.4.0"

[profile.dev]
opt-level = 2
